Fix spacing above smaller headers in articles

--- a/_sass/2-base/_base.scss
+++ b/_sass/2-base/_base.scss
@@ -59,9 +59,15 @@ h6 {
 }
 
 .page h1,
-.page h2,
 .post h1,
-.post h2 {
+.page h2,
+.post h2,
+.page h3,
+.post h3,
+.page h4,
+.post h4,
+.page h5,
+.post h5 {
   margin-top: 50px;
 }
 
